# mt_samples

./: .clang-format  CMakeLists.txt  LICENSE  README.md
ex10_aaclip2/: CMakeLists.txt  aaclip2.h  aaclip2.metal  aaclip2.mm
ex11_dclip/: CMakeLists.txt  dclip.metal  dclip.mm
ex1_main/: CMakeLists.txt  main.mm
ex2_triangle/: CMakeLists.txt  tng.mm  tngsh.metal
ex3_txtriangle/: CMakeLists.txt  txtng.mm  txtngsh.metal
ex4_mpr/: CMakeLists.txt  mpr.metal  mpr.mm  txtng.mm
ex5_aarect/: CMakeLists.txt  aarect.metal  aarect.mm
ex6_mstxt/: CMakeLists.txt  mstxt.h  mstxt.metal  mstxt.mm
ex7_aarect2/: CMakeLists.txt  aarect2.metal  aarect2.mm
ex8_clip/: CMakeLists.txt  clip.metal  clip.mm
ex9_aaclip/: CMakeLists.txt  aaclip.metal  aaclip.mm
